src/Base/main/default/objects/TaxRate__c/fields/displaySeperate__c.field-meta.xml
<CustomField>
    <fullName>displaySeperate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>displaySeperate</label>
    <type>Checkbox</type>
</CustomField>