src/Base/main/default/objects/TaxRate__c/fields/ProvincialName__c.field-meta.xml
<CustomField>
    <fullName>ProvincialName__c</fullName>
    <label>ProvincialName</label>
    <length>10</length>
    <type>Text</type>
</CustomField>