src/Base/main/default/objects/TaxRate__c/fields/ProvincialRate__c.field-meta.xml
<CustomField>
    <fullName>ProvincialRate__c</fullName>
    <label>ProvincialRate</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>